hphp/hack/test/typecheck/override_final4.php.exp
File "override_final4.php", line 17, characters 25-25:
You cannot override this method (Typing[4070])
File "override_final4.php", line 13, characters 25-25:
It was declared as final
